--- a/CORE_VS_PLUGIN.csproj
+++ b/CORE_VS_PLUGIN.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Commands\CMD_Generate_PostgreSQL_ORM.cs" />
     <Compile Include="Commands\CMD_Generate_Query.cs" />
     <Compile Include="Commands\CMD_GIT_PullAll.cs" />
+    <Compile Include="Commands\CMD_PublishNugetPackage.cs" />
     <Compile Include="GENERATOR\CORE_DB_Query_Generator.cs" />
     <Compile Include="GENERATOR\CORE_MySQL_DB_Generator.cs" />
     <Compile Include="GENERATOR\CORE_PostgreSQL_DB_Generator.cs" />
@@ -66,6 +67,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CORE_VS_PLUGINPackage.cs" />
+    <Compile Include="Utils\ConsoleWriter.cs" />
     <Compile Include="Utils\CORE_VS_PLUGIN_HELPER.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -87,6 +89,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Build">
+      <Version>17.14.8</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
       <Version>4.14.0</Version>
     </PackageReference>
@@ -146,6 +151,7 @@
     <EmbeddedResource Include="GENERATOR\Templates\Query\DB_QUERY_PARAMETER_TEMPLATE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+    <Content Include="Commands\Resources\CMD_PublishNugetPackage.png" />
     <Content Include="GENERATOR\XML_Examples\Get_Accounts_for_Email.xml" />
     <Content Include="logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
