added window to choose which tables to generate code for

--- a/CORE_VS_PLUGIN.csproj
+++ b/CORE_VS_PLUGIN.csproj
@@ -62,6 +62,9 @@
     <Compile Include="GENERATOR\Model\CORE_DB_QUERY_Metadata.cs" />
     <Compile Include="GENERATOR\Model\CORE_DB_QUERY_XML.cs" />
     <Compile Include="GENERATOR\Model\CORE_DB_TABLE.cs" />
+    <Compile Include="GENERATOR\ToolWindows\DATABASE_BROWSER.xaml.cs">
+      <DependentUpon>DATABASE_BROWSER.xaml</DependentUpon>
+    </Compile>
     <Compile Include="GENERATOR\ToolWindows\ORM_GENERATOR_WINDOW.xaml.cs">
       <DependentUpon>ORM_GENERATOR_WINDOW.xaml</DependentUpon>
     </Compile>
@@ -163,6 +166,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="GENERATOR\ToolWindows\DATABASE_BROWSER.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="GENERATOR\ToolWindows\ORM_GENERATOR_WINDOW.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
