--- a/CORE_VS_PLUGIN.csproj
+++ b/CORE_VS_PLUGIN.csproj
@@ -46,6 +46,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Commands\CMD_DatabaseBrowser.cs" />
     <Compile Include="Commands\CMD_Generate_MSSQL_ORM.cs" />
     <Compile Include="Commands\CMD_Generate_MySQL_ORM.cs" />
     <Compile Include="Commands\CMD_Generate_PostgreSQL_ORM.cs" />
@@ -93,7 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Build">
-      <Version>17.14.8</Version>
+      <Version>17.14.28</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
       <Version>4.14.0</Version>
@@ -101,7 +102,7 @@
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.14.40265" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.14.2101">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.14.2120">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -109,7 +110,7 @@
       <Version>9.4.0</Version>
     </PackageReference>
     <PackageReference Include="Npgsql">
-      <Version>8.0.3</Version>
+      <Version>8.0.8</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -118,6 +119,7 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Commands\Resources\CMD_DatabaseBrowser.png" />
     <Content Include="Commands\Resources\CMD_Generate_PostgreSQL_ORM_icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
